<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/UpcomingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image"
                android:layout_width="19dp"
                android:src="@drawable/ic_group_a"
                android:layout_height="23dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvScld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:textColor="#000000"
                    android:textSize="14dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scld_date"
                    android:layout_toRightOf="@+id/tvScld"
                    android:textColor="#000000"
                    android:layout_marginLeft="3dp"
                    android:textStyle="bold"
                    android:textSize="14dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvmember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/TvseeProfile"
                    android:layout_width="6dp"
                    android:gravity="center"
                    android:layout_height="12dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/ic_path_363"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="231dp"
                android:textSize="12dp"
                android:textColor="#5A5A5A"
                android:layout_height="wrap_content"
                android:text="@string/address"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>